[package]
name = "logos-lalrpop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
lalrpop-util = "0.19.6"

[build-dependencies]
lalrpop = { version = "0.19.6", default-features = false }
